--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "This is my Personal Porfolio website",
   "main": "index.js",
-  "web": "node index.js",
   "scripts": {
-    "sass": "node-sass -w scss/ -o project/css/ --recursive"
+    "sass": "node-sass -w scss/ -o project/css/ --recursive",
+    "start": "node index.html"
   },
   "author": "Santosh Lama",
   "license": "IT",
