--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "sass": "node-sass -w scss/ -o project/css/ --recursive",
-    "start": "node index.html"
+    "start": "node index.php",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Santosh Lama",
   "license": "IT",
