--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "This is my Personal Porfolio website",
   "scripts": {
-    "sass": "node-sass -w scss/ -o project/css/ --recursive",
+    "sass": "node-sass -w scss/ -o project/css/ --recursive"
+
   },
   "author": "Santosh Lama",
   "license": "IT",
