--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "This is my Personal Porfolio website",
   "scripts": {
     "sass": "node-sass -w scss/ -o project/css/ --recursive",
-    "start": "node src/index.js"
+    "start": "node index.js",
+    "heroku-prebuild": "npm install --dev",
+    "build": "webpack"
   },
   "author": "Santosh Lama",
   "license": "IT",
