--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "santoshportfolio",
   "version": "1.0.0",
   "description": "This is my Personal Porfolio website",
+  "main": "server.js",
   "scripts": {
     "sass": "node-sass -w scss/ -o project/css/ --recursive",
-    "start": "node index.js",
+    "start": "node server.js",
     "heroku-prebuild": "npm install --dev"
   },
   "author": "Santosh Lama",
   "license": "IT",
   "dependencies": {
-    "node-sass": "^5.0.0"
+    "node-sass": "^5.0.0",
+    "ejs": "~1.0.0",
+    "express": "~4.9.8"
   },
   "engines": {
     "node": "12.x"
